Added footer to web pages

--- a/about.html
+++ b/about.html
@@ -28,5 +28,11 @@
                 Video cannot be displayed by your browser. <!-- alternate text for video -->
             </video>
         </div>
+        <footer>
+            <div class="footer">
+                <p class="footer-text">Contact Me: <a href+"mailto:omer.hashmi@ontariotechu.net"</a></p>
+                <p class="footer-text">&copy; 2024 by Omer Hashmi</p>
+            </div>
+        </footer>
     </body>
 </html>
