--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
                 </ul>
             </div>
         </nav>
+        <footer>
+            <div class="footer">
+                <p class="footer-text">Contact Me: <a href+"mailto:omer.hashmi@ontariotechu.net"</a></p>
+                <p class="footer-text">&copy; 2024 by Omer Hashmi</p>
+            </div>
+        </footer>
     </body>
 </html>
