--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
